# simplifying-meshes-along-frame-fields

./: .gitignore  CMakeLists.txt  LICENSE  README.md  alignment_check.cpp  collapsed_dec.h  cross_field.cpp  frame_field_tutorial.cpp  interactive_visualizer.cpp  main.cpp  optimal_collapse_edge_callbacks.cpp  view_mesh.cpp
cmake/: polyscope.cmake
data/: invalidMeshPaths.txt  readme.txt  tooLargeMeshPaths.txt  tooNiceMeshPaths.txt  validMeshPaths.txt
include/: Frame_field.h  mesh.h  per_vertex_point_to_plane_quadrics_aligned.h  qslim_aligned.h  qslim_aligned_callbacks.h  utils.h  window.h
src/: Frame_field.cpp  mesh.cpp  per_vertex_point_to_plane_quadrics_aligned.cpp  qslim_aligned.cpp  qslim_aligned_callbacks.cpp  utils.cpp  window.cpp
